--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,18 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.card {
+  background-color: #5f9ea0;
+  display: inline-block;
+  padding: 25px;
+  margin: 10px;
+  border: 1px solid black;
+}
+.card:hover {
+  opacity: 0.8;
+}
+
+/* .bio {
+  display: none;
+} */
